package com.udacity.project4

import android.app.Application
import android.view.View
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso.closeSoftKeyboard
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.longClick
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.isDialog
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withHint
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.rules.activityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import com.google.android.material.internal.ContextUtils.getActivity
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import kotlinx.coroutines.runBlocking
import org.hamcrest.Matchers.not
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get

@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application

    // An idling resource that waits for Data Binding to have no pending bindings.
    private val dataBindingIdlingResource = DataBindingIdlingResource()

    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    /**
     * Idling resources tell Espresso that the app is idle or busy. This is needed when operations
     * are not scheduled in the main Looper (for example when executed on a different thread).
     */
    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)

    }


    /**
     * Unregister your Idling Resource so it can be garbage collected and does not leak any memory.
     */
    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
    }


    //    TODO: add End to End testing to the app
    @Test
    fun addEmptyReminder_showError() = runBlocking {

        //start screen
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        //espresso code will go here

        //click Add reminder Fab
        onView(withId(R.id.addReminderFAB)).perform(click())

        //check add reminder form
        onView(withId(R.id.reminderTitle)).check(matches(withHint(appContext.getString(R.string.reminder_title))))
        onView(withId(R.id.reminderDescription)).check(matches(withHint(appContext.getString(R.string.reminder_desc))))
        onView(withId(R.id.selectLocation)).check(matches(withText(appContext.getString(R.string.reminder_location))))

        //save Reminder
        onView(withId(R.id.saveReminder)).perform(click())

        //show Snackbar error
        val snackBarMessage = appContext.getString(R.string.err_enter_title)
        onView(withText(snackBarMessage)).check(matches(isDisplayed()))

        //make sure activity is closed before resetting the db
        activityScenario.close()

    }

    @Test
    fun addEmptyLocation_saveErrorLocation() = runBlocking {
        //start screen
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        //espresso code will go here

        //click Add reminder Fab
        onView(withId(R.id.addReminderFAB)).perform(click())

        //check add reminder form
        onView(withId(R.id.reminderTitle)).check(matches(withHint(appContext.getString(R.string.reminder_title))))
        onView(withId(R.id.reminderDescription)).check(matches(withHint(appContext.getString(R.string.reminder_desc))))
        onView(withId(R.id.selectLocation)).check(matches(withText(appContext.getString(R.string.reminder_location))))


        //add reminder
        onView(withId(R.id.reminderTitle)).perform(typeText("New York"))
        onView(withId(R.id.reminderDescription)).perform(typeText("Buy Ipad"))
        closeSoftKeyboard()

        //save Reminder
        onView(withId(R.id.saveReminder)).perform(click())

        //show Snackbar error
        val snackBarMessage = appContext.getString(R.string.err_select_location)
        onView(withText(snackBarMessage)).check(matches(isDisplayed()))

        //make sure activity is closed before resetting the db
        activityScenario.close()

    }


    @Test
    fun saveTest_showToast() {
        //start screen
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        //espresso code will go here
        //click Add reminder Fab
        onView(withId(R.id.addReminderFAB)).perform(click())

        //check add reminder form
        onView(withId(R.id.reminderTitle)).check(matches(withHint(appContext.getString(R.string.reminder_title))))
        onView(withId(R.id.reminderDescription)).check(matches(withHint(appContext.getString(R.string.reminder_desc))))
        onView(withId(R.id.selectLocation)).check(matches(withText(appContext.getString(R.string.reminder_location))))


        //type reminder title and description
        onView(withId(R.id.reminderTitle)).perform(typeText("New York"))
        onView(withId(R.id.reminderDescription)).perform(typeText("Buy Ipad"))
        closeSoftKeyboard()

        //click select location
        onView(withId(R.id.selectLocation)).perform(click())

        //click dialog
        onView(withText(R.string.select_loc_poi)).inRoot(isDialog()).check(matches(isDisplayed()))
        onView(withText(android.R.string.ok)).inRoot(isDialog()).perform(click())

        //click on map and save
        onView(withId(R.id.mapko)).perform(longClick())
        onView(withId(R.id.btn_save)).perform(click())

        //save Reminder
        onView(withId(R.id.saveReminder)).perform(click())

        //check if toasts are displayed
        onView(withText(R.string.reminder_saved)).inRoot(withDecorView(not(getActivity(appContext)?.window?.decorView)))
            .check(matches(isDisplayed()))

        activityScenario.close()
    }


}
